--- a/.github/workflows/build-frontend2-container.yml
+++ b/.github/workflows/build-frontend2-container.yml
@@ -6,7 +6,7 @@ on:
     - "apps/fe1/**"
 
 env:
-  WORKING_DIRECTORY: ./apps/fe1
+  WORKING_DIRECTORY: apps/fe1
 
 jobs:
   build-frontend-container:
