--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,36 +4,31 @@ on:
   pull_request:
 
 jobs:
-  context:
+  detect-changes:
     runs-on: ubuntu-latest
+    outputs:
+      fe1_changed: ${{ steps.filter.outputs.fe1_changed }}
+      fe2_changed: ${{ steps.filter.outputs.fe2_changed }}
     steps:
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
-      # - name: Dump job context
-      #   env:
-      #     JOB_CONTEXT: ${{ toJson(job) }}
-      #   run: echo "$JOB_CONTEXT"
-      # - name: Dump steps context
-      #   env:
-      #     STEPS_CONTEXT: ${{ toJson(steps) }}
-      #   run: echo "$STEPS_CONTEXT"
-      # - name: Dump runner context
-      #   env:
-      #     RUNNER_CONTEXT: ${{ toJson(runner) }}
-      #   run: echo "$RUNNER_CONTEXT"
-      # - name: Dump strategy context
-      #   env:
-      #     STRATEGY_CONTEXT: ${{ toJson(strategy) }}
-      #   run: echo "$STRATEGY_CONTEXT"
-      # - name: Dump matrix context
-      #   env:
-      #     MATRIX_CONTEXT: ${{ toJson(matrix) }}
-      #   run: echo "$MATRIX_CONTEXT"
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - id: filter
+        run: |
+          git fetch origin ${{ github.base_ref }} --depth=1
+          if git diff --name-only origin/${{ github.base_ref }}...${{ github.head_ref }} | grep -q '^apps/fe1/'; then
+            echo "fe1_changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "fe1_changed=false" >> $GITHUB_OUTPUT
+          fi
+          if git diff --name-only origin/${{ github.base_ref }}...${{ github.head_ref }} | grep -q '^apps/fe2/'; then
+            echo "fe2_changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "fe2_changed=false" >> $GITHUB_OUTPUT
+          fi
 
   build-fe1:
-    if: contains(github.event.pull_request.changed_files, 'apps/fe1/')
+    needs: detect-changes
+    if: needs.detect-changes.outputs.fe1_changed == 'true'
     runs-on: ubuntu-latest
     env:
       WORKING_DIRECTORY: apps/fe1
@@ -43,22 +38,20 @@ jobs:
         with:
           sparse-checkout: ${{ env.WORKING_DIRECTORY }}
           sparse-checkout-cone-mode: false
-
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "22"
-
       - name: Install dependencies
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: npm ci
-
       - name: Build frontend app
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: npm run build
 
   build-fe2:
-    if: contains(github.event.pull_request.changed_files, 'apps/fe2/')
+    needs: detect-changes
+    if: needs.detect-changes.outputs.fe2_changed == 'true'
     runs-on: ubuntu-latest
     env:
       WORKING_DIRECTORY: apps/fe2
@@ -72,11 +65,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "22"
-
       - name: Install dependencies
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: npm ci
-
       - name: Build frontend app
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: npm run build
