--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,12 +15,12 @@ jobs:
       - id: filter
         run: |
           git fetch origin ${{ github.base_ref }} --depth=1
-          if git diff --name-only origin/${{ github.base_ref }}...${{ github.head_ref }} | grep -q '^apps/fe1/'; then
+          if git diff --name-only origin/${{ github.base_ref }}...HEAD | grep -q '^apps/fe1/'; then
             echo "fe1_changed=true" >> $GITHUB_OUTPUT
           else
             echo "fe1_changed=false" >> $GITHUB_OUTPUT
           fi
-          if git diff --name-only origin/${{ github.base_ref }}...${{ github.head_ref }} | grep -q '^apps/fe2/'; then
+          if git diff --name-only origin/${{ github.base_ref }}...HEAD | grep -q '^apps/fe2/'; then
             echo "fe2_changed=true" >> $GITHUB_OUTPUT
           else
             echo "fe2_changed=false" >> $GITHUB_OUTPUT
