--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,19 @@ name: Build
 
 on:
   pull_request:
+    branches:
+      - main
+  push:
+    branches:
+      - main
+
+env:
+  FE1_PATHS: |
+    apps/fe1
+    tools
+  FE2_PATHS: |
+    apps/fe2
+    tools
 
 jobs:
   detect-changes:
@@ -12,24 +25,33 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - id: filter
+
+      - name: Filter which workflows to run
+        id: filter
         run: |
-          git fetch origin ${{ github.base_ref }} --depth=1
-          if git diff --name-only origin/${{ github.base_ref }}...HEAD | grep -q '^apps/fe1/'; then
-            echo "fe1_changed=true" >> $GITHUB_OUTPUT
-          else
-            echo "fe1_changed=false" >> $GITHUB_OUTPUT
-          fi
-          if git diff --name-only origin/${{ github.base_ref }}...HEAD | grep -q '^apps/fe2/'; then
-            echo "fe2_changed=true" >> $GITHUB_OUTPUT
-          else
-            echo "fe2_changed=false" >> $GITHUB_OUTPUT
-          fi
+          echo "Checking for changes in frontend apps..."
+
+          git fetch origin main --depth=1
+          git diff --name-only origin/main...HEAD > changed_files.txt
+
+          for var in FE1_PATHS FE2_PATHS; do
+            changed=false
+            while read -r path; do
+              [[ -z "$path" ]] && continue
+              grep -q "^$path" changed_files.txt && changed=true && break
+            done <<< "${!var}"
+            key=$(echo "$var" | tr '[:upper:]' '[:lower:]' | sed 's/_paths//')
+            echo "$key"_changed=$changed >> $GITHUB_OUTPUT
+          done
 
   build-fe1:
     needs: detect-changes
     if: needs.detect-changes.outputs.fe1_changed == 'true'
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: ${{ env.WORKING_DIRECTORY }}
     env:
       WORKING_DIRECTORY: apps/fe1
     steps:
@@ -43,16 +65,18 @@ jobs:
         with:
           node-version: "22"
       - name: Install dependencies
-        working-directory: ${{ env.WORKING_DIRECTORY }}
         run: npm ci
       - name: Build frontend app
-        working-directory: ${{ env.WORKING_DIRECTORY }}
         run: npm run build
 
   build-fe2:
     needs: detect-changes
     if: needs.detect-changes.outputs.fe2_changed == 'true'
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: ${{ env.WORKING_DIRECTORY }}
     env:
       WORKING_DIRECTORY: apps/fe2
     steps:
@@ -66,8 +90,6 @@ jobs:
         with:
           node-version: "22"
       - name: Install dependencies
-        working-directory: ${{ env.WORKING_DIRECTORY }}
         run: npm ci
       - name: Build frontend app
-        working-directory: ${{ env.WORKING_DIRECTORY }}
         run: npm run build
