--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,13 +35,14 @@ jobs:
             BASE_REF="origin/${GITHUB_BASE_REF}"
             HEAD_REF="$GITHUB_SHA"
             git fetch origin $GITHUB_BASE_REF --depth=1
+            git diff --name-only $BASE_REF $HEAD_REF > changed_files.txt
           else
-            BASE_REF="origin/main"
-            HEAD_REF="$GITHUB_SHA"
-            git fetch origin main --depth=1
+            git fetch origin main --depth=2
+            LAST_TWO=$(git rev-list --max-count=2 origin/main)
+            BASE_REF=$(echo "$LAST_TWO" | tail -n1)
+            HEAD_REF=$(echo "$LAST_TWO" | head -n1)
+            git diff --name-only $BASE_REF $HEAD_REF > changed_files.txt
           fi
-
-          git diff --name-only $BASE_REF $HEAD_REF > changed_files.txt
 
           for var in FE1_PATHS FE2_PATHS; do
             changed=false
