fix: workflows not running when a merge is made

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,20 +32,7 @@ jobs:
         id: filter
         run: |
           echo "Checking for changes in frontend apps..."
-
-          if [[ "$GITHUB_EVENT_NAME" == "pull_request" ]]; then
-            BASE_REF="origin/${GITHUB_BASE_REF}"
-            HEAD_REF="$GITHUB_SHA"
-            git fetch origin $GITHUB_BASE_REF --depth=1
-            git diff --name-only $BASE_REF $HEAD_REF > changed_files.txt
-          else
-            git fetch origin main --depth=2
-            LAST_TWO=$(git rev-list --max-count=2 origin/main)
-            BASE_REF=$(echo "$LAST_TWO" | tail -n1)
-            HEAD_REF=$(echo "$LAST_TWO" | head -n1)
-            git diff --name-only $BASE_REF $HEAD_REF > changed_files.txt
-          fi
-
+          git diff --name-only main~1 main > changed_files.txt
           for var in FE1_PATHS FE2_PATHS; do
             changed=false
             while read -r path; do
