--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,16 @@ jobs:
         id: filter
         run: |
           echo "Checking for changes in frontend apps..."
-          git diff --name-only main~1 main > changed_files.txt
+          
+          if [[ "$GITHUB_EVENT_NAME" == "pull_request" ]]; then
+            BASE_REF="origin/${GITHUB_BASE_REF}"
+            HEAD_REF="$GITHUB_SHA"
+            git fetch origin $GITHUB_BASE_REF --depth=1
+            git diff --name-only $BASE_REF $HEAD_REF > changed_files.txt
+          else
+            git diff --name-only origin/main~1 origin/main > changed_files.txt
+          fi
+
           for var in FE1_PATHS FE2_PATHS; do
             changed=false
             while read -r path; do
