--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,8 @@ jobs:
       - name: Output Github context
         env:
           CONTEXT: ${{ toJson(github) }}
-        run: echo "Github context: $CONTEXT"
+        run: |
+          echo "Github context: $CONTEXT"
 
       - name: Filter which workflows to run
         id: filter
