--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,10 +34,10 @@ jobs:
         run: |
           echo "Checking for changes in frontend apps..."
           
-          if [[ "$GITHUB_REF_NAME" != "main" ]]; then
-            BASE_REF="origin/${GITHUB_REF_NAME}"
+          if [[ "$GITHUB_REF" != "main" ]]; then
+            BASE_REF="origin/${GITHUB_BASE_REF}"
             HEAD_REF="$GITHUB_SHA"
-            git fetch origin $BASE_REF --depth=1
+            git fetch origin $GITHUB_BASE_REF --depth=1
             git diff --name-only $BASE_REF $HEAD_REF > changed_files.txt
           else
             git diff --name-only origin/main~1 origin/main > changed_files.txt
