--- a/apps/fe2/package.json
+++ b/apps/fe2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fe2",
-  "private": truessssss,
+  "private": truesssssss,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
