--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
           echo "Checking for changes in frontend apps..."
 
           if [[ "$GITHUB_REF_NAME" != "main" ]]; then
-            BASE_REF="${PREVIOUS_COMMIT}"
+            BASE_REF="$PREVIOUS_COMMIT"
             HEAD_REF="$GITHUB_SHA"
             git diff --name-only $BASE_REF $HEAD_REF > changed_files.txt
           else
