--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,7 @@ jobs:
               $key = $app.ToLower() -replace "_paths", ""
               Add-Content -Path $env:GITHUB_OUTPUT -Value "$key`_changed=$changed"
           }
+          printenv
 
   build-fe1:
     needs: detect-changes
