--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,15 +63,25 @@ jobs:
               $headRef = "origin/main"
           }
 
+          Write-Host "Base ref: $baseRef"
+          Write-Host "Head ref: $headRef"
+
           $changedFiles = git diff --name-only $baseRef $headRef | Where-Object { $_ -ne "" }
+          Write-Host "Changed files:"
+          $changedFiles | ForEach-Object { Write-Host $_ }
 
           $apps = @('FE1_PATHS', 'FE2_PATHS')
           foreach ($app in $apps) {
               $changed = $false
               $paths = (${env:$app} -split ",") | ForEach-Object { $_.Trim() } | Where-Object { $_ -ne "" }
+              Write-Host "Checking app: $app"
+              Write-Host "Paths: $($paths -join ', ')"
               foreach ($path in $paths) {
+                  Write-Host "  Checking path: $path"
                   foreach ($file in $changedFiles) {
+                      Write-Host "    Against file: $file"
                       if ($file.StartsWith($path)) {
+                          Write-Host "    Match found!"
                           $changed = $true
                           break
                       }
@@ -79,6 +89,7 @@ jobs:
                   if ($changed) { break }
               }
               $key = $app.ToLower() -replace "_paths", ""
+              Write-Host "$key`_changed=$changed"
               Add-Content -Path $env:GITHUB_OUTPUT -Value ($key + "_changed=$changed")
           }
           Write-Host "Changed files content"
