--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,10 +74,10 @@ jobs:
 
           Write-Host "FE1_PATHS: $env:FE1_PATHS"
           Write-Host "FE2_PATHS: $env:FE2_PATHS"
-          
+
           foreach ($app in $apps) {
               $changed = $false
-              $paths = (${env:$app} -split ",") | ForEach-Object { $_.Trim() } | Where-Object { $_ -ne "" }
+              $paths = ($env:Get_Item($app) -split ",") | ForEach-Object { $_.Trim() } | Where-Object { $_ -ne "" }
               Write-Host "Checking app: $app"
               Write-Host "Paths: $($paths -join ', ')"
               foreach ($path in $paths) {
