--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,33 +19,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      # - name: Filter which workflows to run
-      #   id: filter
-      #   env:
-      #     PREVIOUS_COMMIT: ${{ github.event.before }}
-      #   run: |
-      #     echo "Checking for changes in frontend apps..."
-
-      #     if [[ "$GITHUB_REF_NAME" != "main" ]]; then
-      #       BASE_REF="$PREVIOUS_COMMIT"
-      #       HEAD_REF="$GITHUB_SHA"
-      #       git diff --name-only $BASE_REF $HEAD_REF > changed_files.txt
-      #     else
-      #       git diff --name-only origin/main~1 origin/main > changed_files.txt
-      #     fi
-
-      #     for var in FE1_PATHS FE2_PATHS; do
-      #       changed=false
-      #       while read -r path; do
-      #         [[ -z "$path" ]] && continue
-      #         grep -q "^$path" changed_files.txt && changed=true && break
-      #       done <<< "${!var}"
-      #       key=$(echo "$var" | tr '[:upper:]' '[:lower:]' | sed 's/_paths//')
-      #       echo "$key"_changed=$changed >> $GITHUB_OUTPUT
-      #     done
-
-      #     printenv
-
       - name: Filter which workflows to run
         id: filter
         env:
@@ -67,20 +40,22 @@ jobs:
 
           $apps = @('FE1_PATHS', 'FE2_PATHS')
           foreach ($app in $apps) {
+              $appName = $app.ToLower() -replace "_paths", ""
               $changed = $false
               $paths = ([System.Environment]::GetEnvironmentVariable($app) -split ",") | ForEach-Object { $_.Trim() } | Where-Object { $_ -ne "" }
+              
               foreach ($path in $paths) {
                   foreach ($file in $changedFiles) {
                       if ($file.StartsWith($path)) {
-                          Write-Host "$($app) change detected!"
+                          Write-Host "$($appName) change detected!"
                           $changed = $true
                           break
                       }
                   }
                   if ($changed) { break }
               }
-              $key = $app.ToLower() -replace "_paths", ""
-              Add-Content -Path $env:GITHUB_OUTPUT -Value ($key + "_changed=$changed")
+
+              Add-Content -Path $env:GITHUB_OUTPUT -Value ($appName + "_changed=$changed")
           }
 
   build-fe1:
