--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,24 +70,24 @@ jobs:
   build-fe1:
     needs: detect-changes
     if: needs.detect-changes.outputs.fe1_changed == 'true'
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
     # uses: nojussta/monorepo-test/apps/fe1/.github/workflows/build-frontend.yml@${{ github.sha }}
-    # uses: ./apps/fe1/.github/workflows/build-frontend.yml
-    steps:
-      - name: Dispatch workflow
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ github.token }}
-          script: |
-            await github.rest.actions.createWorkflowDispatch({
-              owner: 'nojussta',
-              repo: 'monorepo-test',
-              workflow_id: 'apps/fe1/.github/workflows/build-frontend.yml',
-              ref: '${{ github.ref_name }}'
-            })
+    uses: ./apps/fe1/.github/workflows/build-frontend.yml
+    # steps:
+    #   - name: Dispatch workflow
+    #     uses: actions/github-script@v7
+    #     with:
+    #       github-token: ${{ github.token }}
+    #       script: |
+    #         await github.rest.actions.createWorkflowDispatch({
+    #           owner: 'nojussta',
+    #           repo: 'monorepo-test',
+    #           workflow_id: 'apps/fe1/.github/workflows/build-frontend.yml',
+    #           ref: '${{ github.ref_name }}'
+    #         })
 
-  # build-fe2:
-  #   needs: detect-changes
-  #   if: needs.detect-changes.outputs.fe2_changed == 'true'
-  #   # uses: nojussta/monorepo-test/apps/fe2/.github/workflows/build-frontend.yml@${{ github.sha }}
-  #   uses: ./apps/fe2/.github/workflows/build-frontend.yml
+  build-fe2:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.fe2_changed == 'true'
+    # uses: nojussta/monorepo-test/apps/fe2/.github/workflows/build-frontend.yml@${{ github.sha }}
+    uses: ./apps/fe2/.github/workflows/build-frontend.yml
