--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,7 +73,7 @@ jobs:
     if: needs.detect-changes.outputs.fe1_changed == 'true'
     # runs-on: ubuntu-latest
     # uses: nojussta/monorepo-test/apps/fe1/.github/workflows/build-frontend.yml@${{ github.sha }}
-    uses: './apps/fe1/.github/workflows/build-frontend.yml@main'
+    uses: nojussta/monorepo-test/apps/fe1/.github/workflows/build-frontend.yml@main
     # steps:
     #   - name: Dispatch workflow
     #     uses: actions/github-script@v7
@@ -91,4 +91,4 @@ jobs:
     needs: detect-changes
     if: needs.detect-changes.outputs.fe2_changed == 'true'
     # uses: nojussta/monorepo-test/apps/fe2/.github/workflows/build-frontend.yml@${{ github.sha }}
-    uses: './apps/fe2/.github/workflows/build-frontend.yml@main'
+    uses: nojussta/monorepo-test/apps/fe2/.github/workflows/build-frontend.yml@main
